fixed overflow

--- a/stylesHome.css
+++ b/stylesHome.css
@@ -1,8 +1,8 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     max-width: 100%;
-    margin: 10px;
-    padding: 10px;
+    margin: 0;
+    padding: 0;
 }
 
 .container{
@@ -11,6 +11,8 @@ body{
     width: 100%;
     max-width: 100%;
     gap: 25px;
+    margin: 0;
+    padding: 10px 10px;
 }
 
 .section{
